# Project_VOICE

./: README.md  README.txt  pyproject.toml
project_voice/: __init__.py  cli.py  config.py  dataset.py  gui.py  inference.py  losses.py  preprocess.py  quickstart.py  trainer.py
project_voice/data/: __init__.py  acquire.py
project_voice/models/: encoders.py  pitch.py  retrieval.py  rvc.py  vocoder.py
project_voice/utils/: audio.py  guardrails.py  watermark.py
tests/: test_acquire.py
